<resources>
    <string name="app_name">SNAPP-Smart Nutrition App</string>
    <string name="login">Login</string>
    <string name="sign_in_to_countinue">Sign In to Countinue</string>
    <string name="password">Password</string>
    <string name="Judul">Nutriscan</string>
    <string name="Subjudul">Pindai, tahu, sehat! Nutriscan membantu Anda melacak nutrisi harian dengan mudah. Cukup pindai label makanan, dan aplikasi akan menampilkan visualisasi nutrisi yang jelas dan mudah dipahami. Sempurna untuk Anda dan keluarga!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_with_google">Login with google</string>
    <string name="sign_in_with_google">Sign In with google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="scan">Scan</string>
    <string name="bookmark">bookmark</string>
    <string name="edit_profile_button">Tombol Edit Profil</string>
    <string name="image_classifier_failed">Gagal</string>

</resources>