<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.Loginactivity">

    <TextView
        android:id="@+id/HeadingLogin"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="133dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/SubjudulLogin"
        style="@style/heading_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in_to_countinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeadingLogin" />
    <!--    Login-->
    <TextView
        android:id="@+id/Login"
        style="@style/heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="39dp"
        android:layout_marginTop="98dp"
        android:text="Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/Primary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/Primary"
        app:hintTextColor="@color/Primary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:fontFamily="@font/poppins"
            android:inputType="textEmailAddress"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--    Password-->
    <TextView
        android:id="@+id/pasword"
        style="@style/heading_2"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="19dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/baseline_visibility_24"
        app:passwordToggleTint="@color/Primary"
        app:startIconTint="@color/Primary"
        app:passwordToggleContentDescription="show password"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/Primary"
        app:hintTextColor="@color/Primary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/tvLogin"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="39dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"/>
    <TextView
        style="@style/heading_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login_with_google"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
    <Button
        android:id="@+id/SignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="85dp"
        android:text="@string/sign_in_with_google"
        android:drawablePadding="8dp" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/Primary"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>